--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -15,13 +15,15 @@ jobs:
         submodules: true  # Fetch Hugo themes (true OR recursive)
         fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
 
-    - name: Setup Hugo
-      uses: peaceiris/actions-hugo@v2
+    - name: Setup Node
+      uses: actions/setup-node@v3
       with:
-        hugo-version: '0.101.0'
+        node-version: 16
 
     - name: Build
-      run: hugo --minify
+      run: npm install honkit --save-dev
+      run: |
+        npx honkit build
 
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
