--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -35,3 +35,46 @@ jobs:
       with:
         deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
         publish_dir: ./_book
+
+  job_deploy_ebooks:
+    name: 'deploy ebooks'
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        submodules: true  # Fetch Hugo themes (true OR recursive)
+        fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
+
+    - name: Setup Node
+      uses: actions/setup-node@v3
+      with:
+        node-version: 16
+
+    - name: Installing 
+      run: npm install honkit --save-dev
+
+    - name: 'Installing calibre'
+      run: |
+        sudo -v
+        wget -nv -O- https://download.calibre-ebook.com/linux-installer.sh | sudo sh /dev/stdin
+    
+    - name: 'Preparing for ebooks generations'
+      run: |
+        npx honkit build
+        mkdir _book
+
+    - name: 'Generating ebook in pdf'
+      run: honkit pdf ./ ./_book/${{ env.ebook_name }}.pdf
+    - name: 'Generating ebook in epub'
+      run: honkit epub ./ ./_book/${{ env.ebook_name }}.epub
+    - name: 'Generating ebook in mobi'
+      run: honkit mobi ./ ./_book/${{ env.ebook_name }}.mobi
+    
+    - name: Deploy
+      uses: peaceiris/actions-gh-pages@v3
+      # If you're changing the branch from main,
+      # also change the `main` in `refs/heads/main`
+      # below accordingly.
+      with:
+        deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+        publish_dir: ./_book
