--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -56,9 +56,8 @@ jobs:
     - name: Installing Prerequisite 
       run: |
         npm install honkit --save-dev
-        sudo -v 
-        apt-get update
-        apt-get install libgl1-mesa-glx
+        sudo apt-get update
+        sudo apt-get install -y libgl1-mesa-glx
 
     - name: 'Installing calibre'
       run: |
