--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -58,6 +58,7 @@ jobs:
         npm install honkit --save-dev
         sudo apt-get update
         sudo apt-get install -y libgl1-mesa-glx
+        sudo apt-get install -y ocl-icd-opencl-dev
 
     - name: 'Installing calibre'
       run: |
