--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -77,11 +77,11 @@ jobs:
         cd ../
 
     - name: 'Generating ebook in pdf'
-      run: npx honkit pdf ./ ./_book/ebooks/${{ env.EBOOK_NAME }}.pdf
+      run: npx honkit pdf ./ ./_book/ebooks/ebook${{ env.EBOOK_NAME }}.pdf
     - name: 'Generating ebook in epub'
-      run: npx honkit epub ./ ./_book/ebooks/${{ env.EBOOK_NAME }}.epub
+      run: npx honkit epub ./ ./_book/ebooks/ebook${{ env.EBOOK_NAME }}.epub
     - name: 'Generating ebook in mobi'
-      run: npx honkit mobi ./ ./_book/ebooks/${{ env.EBOOK_NAME }}.mobi
+      run: npx honkit mobi ./ ./_book/ebooks/ebook${{ env.EBOOK_NAME }}.mobi
     
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
